Fix z-index Sidebar

--- a/src/Components/SideBar/SideBar.css
+++ b/src/Components/SideBar/SideBar.css
@@ -19,7 +19,7 @@
     color: white;
 
 }
-#swipeableDrawer{
+.css-x15wq9{
     position: relative;
     z-index: 5;
 }
